2006-01-16  Callum McKenzie  <callum@spooky-possum.org>

	* rules/golf.scm: A distilled version of Alan Horkan's cleanups
	from bug #325038. None of the support for Putt Putt though.

	* rules/osmosis.scm:
	* rules/peek.scm: Patch from Zach Keene to add three card deals
	and to make peek inherit from osmosis. Bug #32028.

2006-01-01  Callum McKenzie  <callum@spooky-possum.org>

	* rules/gaps.scm: Patch from Zach Keene to add an option to shuffle
	the gaps on a redeal.

2005-12-28  Callum McKenzie  <callum@spooky-possum.org>

	* events.c (button_press_event): Make the middle button a
	synthetic double-click. As suggested by sigge in bug #324614.

	* draw.c: Calculate the card list compression ratio directly
	rather than using the old iterative method. This is not only more
	efficient, but also means that long stacks of cards don't shorten
	up more than neighbouring uncompressed stacks. See bug #324611.

2005-12-21  Callum McKenzie  <callum@spooky-possum.org>

	* dialog.c (show_select_game_dialog): unref objects, don't free
	them. Bug #323931.

2005-12-14  Callum McKenzie  <callum@spooky-possum.org>

	* rules/athena.scm: 
	* rules/saratoga.scm: Add droppable support, allow double-clicking
	of the foundations and remove ^M line endings.

	* rules/Makefile.am: 
	* rules/saratoga.acm:
	* rules/athena.scm: Two new games from Alan Horkan: Saratoga and
	Athena. Also rerun get_title.pl to update the translatable names.

2005-12-12  Callum McKenzie  <callum@spooky-possum.org>

	* rules/kings_audience.scm:
	* rules/Makefile.am: New game from Zach Keene: King's Audience.

2005-12-03  Callum McKenzie  <callum@spooky-possum.org>

	* rules/agnes.scm: Remove the restriction on playing onto a base
	card in the tableau - it was confusing players (see bug
	#322986). Also do a append-string -> format fix.

	* menu.c: Add a keyboard short-cut for changing the game. I chose
	Ctrl-O in analogy to "Open".

	* rules/elevator.scm (droppable?): Add the droppable? function