@@ -4,6 +4,7 @@
 <!ENTITY agnes SYSTEM "agnes.xml">
 <!ENTITY athena SYSTEM "athena.xml">
 <!ENTITY auld-lang-syne SYSTEM "auld_lang_syne.xml">
+<!ENTITY aunt-mary SYSTEM "aunt_mary.xml">
 <!ENTITY backbone SYSTEM "backbone.xml">
 <!ENTITY bakers-dozen SYSTEM "bakers_dozen.xml">
 <!ENTITY bakers-game SYSTEM "bakers_game.xml">
@@ -279,6 +280,7 @@ been coded for your pleasure in the GNOME scripting language (Scheme).
   &agnes;
   &athena;
   &auld-lang-syne;
+  &aunt_mary;
   &backbone;
   &bakers-dozen;
   &bakers-game;
