@@ -1,0 +1,101 @@
+<sect1 id="Aunt Mary"><!--<sect1info>
+    <copyright>
+      <year>2005</year>
+      <holder>Alan Horkan</holder>
+    </copyright>
+    <author>
+      <firstname>Alan</firstname>
+      <surname>Horkan</surname>
+    </author>
+  </sect1info>-->
+
+  <title>Aunt Mary</title>
+
+  <sect2>Setup</sect2>
+
+  <informaltable>
+    <tgroup cols="2"><tbody>
+	<row>
+	  <entry>Type of Deck</entry>
+	  <entry>Standard Deck</entry>
+	</row>
+	<row>
+	  <entry>Stock</entry>
+	  <entry>
+	    Top left pile.  The rest of the deck is placed here after
+	    dealing on to the Tableau.  Cards are turned over one at a
+	    time to Waste.  Two redeals.
+	  </entry>
+	</row>
+	<row>
+	  <entry>Waste</entry>
+	  <entry>
+	    To be taken from Stock.  Top card available for
+	    play.
+	  </entry>
+	</row>
+	<row>
+	  <entry>Foundations</entry>
+	  <entry>
+	    Four piles top right.  To be built up in suit from Ace to
+	    King.  Topmost card in each Foundation can be played back on
+	    to the Tableau.
+	  </entry>
+	</row>
+	<row>
+	  <entry>Tableau</entry>
+	  <entry>
+	    Six piles, deal card face up in first pile.  Place one
+	    card face down on all other piles.  Place one card face up
+	    on the first two piles then one card face down on all covered
+	    piles.  Place three cards face up and the rest face down and so on.  
+	    Repeat gradually revealing more cards each time until there are 
+            six rows with six cards.  
+	    Tableau can be built down in alternating colors.  Groups of
+	    cards can be moved.  Empty piles can only be filled by Kings
+	    or group of cards starting with a King.
+	  </entry>
+	</row>
+      </tbody>
+    </tgroup>
+  </informaltable>
+
+  <sect2>Goal</sect2>
+  <para>
+    Move all cards to the Foundation piles.
+  </para>
+
+  <sect2>Rules</sect2>
+  <para>
+    Cards in the Tableau are built down by alternating color.  Groups of
+    cards can be moved.  An empty pile in the Tableau can be filled with
+    a King or a group of cards with a King on the bottom.
+  </para>
+  <para>
+    Cards are flipped from the Stock to the Waste individually.  Top
+    card in Waste is in play.  When Stock is empty, move all cards in
+    Waste back to the Stock, maintaining order. You can go through the
+    deck three times.
+  </para>
+  <para>
+    Foundations are built up in suit from Ace to King.  Cards in
+    Foundations are still in play.  Double clicking on a card will move
+    it to the appropriate Foundation pile if such a move is possible.
+  </para>
+
+  <sect2>Scoring</sect2>
+  <para>
+    Each card in the Foundation piles scores one point.
+  </para>
+  <para>
+    Maximum possible score:  52
+  </para>
+
+  <sect2>Strategy</sect2>
+  <para>
+    Aunt Mary is extremely difficult and rarely solvable.  
+    The real challenge is not finishing but seeing how far you can get.  
+  </para>
+</sect1>
+
+<!-- TODO Aunt Mary is a Klondike variation, refernce and crosslink them -->
