@@ -4,6 +4,7 @@
 <!ENTITY agnes SYSTEM "agnes.xml">
 <!ENTITY athena SYSTEM "athena.xml">
 <!ENTITY auld-lang-syne SYSTEM "auld_lang_syne.xml">
+<!ENTITY aunt-mary SYSTEM "aunt_mary.xml">
 <!ENTITY backbone SYSTEM "backbone.xml">
 <!ENTITY bakers-dozen SYSTEM "bakers_dozen.xml">
 <!ENTITY bakers-game SYSTEM "bakers_game.xml">
@@ -282,6 +283,7 @@
 		<title>Les jeux</title>
 		&agnes;
 		&auld-lang-syne;
+		&aunt-mary;
 		&backbone;
 		&bakers-dozen;
 		&bakers-game;
