@@ -1,5 +1,12 @@
 2006-01-16  Callum McKenzie  <callum@spooky-possum.org>
 
+	* fr/aisleriot.xml: 
+	* fr/aunt_mary.xml:
+	* fr/Makefile.am
+	* C/aisleriot.xml: 
+	* C/aunt_mary.xml:
+	* C/Makefile.am: Rules for Aunt Mary.
+
 	* C/peek.xml: 
 	* C/osmosis.xml: Document the three-card deal options.
 
