@@ -1,5 +1,9 @@
 2006-01-16  Callum McKenzie  <callum@spooky-possum.org>
 
+	* rules/Makefile.am: 
+	* rules/aunt_mary.scm:
+	* translatable_names.h: New game from Alan Horkan: Aunt Mary.
+
 	* rules/golf.scm: A distilled version of Alan Horkan's cleanups
 	from bug #325038. None of the support for Putt Putt though.
 
